# compas_nurbs

./: .bumpversion.cfg  .gitignore  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  README.rst  doc_versions.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tasks.py
.github/workflows/: build.yml  deploy-n-publish.yml  docs.yml  pr-checks.yml  release.yml
0.1.0/: .buildinfo  gettingstarted.html  search.html
0.1.0/.doctrees/: gettingstarted.doctree
0.1.0/.doctrees/examples/: draw_curve_rhino.doctree
0.1.0/_modules/: index.html
0.1.0/_modules/compas_nurbs/: curve.html  surface.html
0.1.0/examples/: draw_curve_rhino.html
0.2.0/: api.html  genindex.html  objects.inv
0.2.0/_modules/: index.html
0.2.0/api/: compas_nurbs.html
0.2.0/examples/: draw_curve_rhino.html  draw_surface_rhino.html
docs/: api.rst  conf.py  gettingstarted.rst  index.rst  licence.rst
docs/api/: compas_nurbs.rst
docs/examples/: draw_curve_rhino.py  draw_curve_rhino.rst  draw_cylinder.py  draw_surface.py  draw_surface_rhino.py  draw_surface_rhino.rst
docs/reference/: index.rst
latest/: .buildinfo  api.html  contributing.html  examples.html  genindex.html  gettingstarted.html  index.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js
latest/.doctrees/: api.doctree  contributing.doctree  examples.doctree  gettingstarted.doctree  index.doctree  license.doctree
latest/.doctrees/api/: compas_nurbs.doctree
latest/.doctrees/examples/: draw_curve_rhino.doctree  draw_surface_rhino.doctree
latest/_modules/compas_nurbs/: curve.html  surface.html
latest/api/: compas_nurbs.html
latest/examples/: draw_curve_rhino.html  draw_surface_rhino.html
pull_20/: api.html  contributing.html  genindex.html  index.html  py-modindex.html  searchindex.js
pull_20/.doctrees/: examples.doctree  index.doctree  license.doctree
pull_20/api/: compas_nurbs.html
pull_20/examples/: draw_surface_rhino.html
src/compas_nurbs/: __init__.py  __version__.py  bspline.py  bspline_curve.py  bspline_surface.py  calculations_numpy.py  conftest.py  curvature.py  curve.py  evaluators.py  evaluators_numpy.py  fitting.py  fitting_numpy.py  helpers.py  knot_vectors.py  nurbs_curve.py  operations.py  operations_numpy.py  surface.py  tests.py  utilities.py
src/compas_nurbs/artists/: rhino.py
src/compas_nurbs/backends/: verb.py
src/compas_nurbs/data/: bsplines_data.json  crv.json  curves2loft.json  cylinder.json  end_derivatives_data.json  rhino_curve_data_3_0.json  rhino_curve_data_3_1.json  rhino_curve_data_3_2.json  rhino_curve_data_3_chord.json  rhino_curve_data_3_chord_sqrt.json  rhino_curve_data_3_uniform.json  rhino_curve_data_5_0.json  rhino_curve_data_5_uniform.json  rhino_curve_data_7_0.json  rhino_curve_data_7_uniform.json  rhino_curve_data_9_0.json  rhino_curve_data_9_uniform.json  surface.json
src/compas_nurbs/ghpython/: curve_artist.py  geometry.py  surface_artist.py
src/compas_nurbs/rhino/: __init__.py  curve_artist.py  install.py  surface_artist.py
tests/: test_curve.py  test_fitting.py  test_nurbs.py  test_sample.py  test_surface.py  test_verb.py  tests_fitting.py
