[build-system]
requires = ["setuptools>=66.0"]
build-backend = "setuptools.build_meta"

# ============================================================================
# project info
# ============================================================================

[project]
name = "compas_nurbs"
description = "NURBS for COMPAS"
keywords = ["compas", "nurbs", "rhino", "bspline"]
authors = [
    { name = "Gramazio Kohler Research", email = "gramaziokohler@arch.ethz.ch" },
]
license = { file = "LICENSE" }
readme = "README.rst"
requires-python = ">=3.9"
dynamic = ['dependencies', 'optional-dependencies', 'version']
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://compas.dev/compas_nurbs"
Documentation = "https://compas.dev/compas_nurbs"
Repository = "https://github.com/compas-dev/compas_nurbs"
Changelog = "https://github.com/compas-dev/compas_nurbs/blob/main/CHANGELOG.rst"
Issues = "https://github.com/compas-dev/compas_nurbs/issues"
Forum = "https://forum.compas-framework.org/"

# ============================================================================
# setuptools config
# ============================================================================

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true
zip-safe = false

[tool.setuptools.dynamic]
version = { attr = "compas_nurbs.__version__" }
dependencies = { file = "requirements.txt" }
optional-dependencies = { dev = { file = "requirements-dev.txt" } }

[tool.setuptools.packages.find]
where = ["src"]

# ============================================================================
# replace pytest.ini
# ============================================================================

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests", "src/compas_nurbs"]
python_files = ["test_*.py", "*_test.py", "test.py"]
addopts = [
    "-ra",
    "--strict-markers",
    "--doctest-glob=*.rst",
    "--tb=short",
    "--import-mode=importlib",
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
    "ALLOW_UNICODE",
    "ALLOW_BYTES",
    "NUMBER",
]

# ============================================================================
# replace bumpversion.cfg
# ============================================================================

[tool.bumpversion]
current_version = "0.2.0"
message = "Bump version to {new_version}"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "src/compas_nurbs/__init__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "CHANGELOG.rst"
search = "Unreleased"
replace = "{new_version}"

# ============================================================================
# replace setup.cfg
# ============================================================================

[tool.ruff]
line-length = 179
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["I001"]
"tests/*" = ["I001"]
"tasks.py" = ["I001"]

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["compas_nurbs"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pycodestyle]
max-doc-length = 179

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
